--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@grapesjs/react": "^2.0.0",
     "@tanstack/react-query": "^5.90.14",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "grapesjs": "^0.22.14",
+    "grapesjs-blocks-basic": "^1.0.2",
+    "grapesjs-preset-webpage": "^1.0.3",
+    "grapesjs-tailwind": "^1.0.13",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
